--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rdf-easy",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "easy access to linked data and RDF",
   "author": "Jeff Zucker",
   "license": "MIT",
@@ -20,5 +20,6 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "main": "./src/index.js"
+  "main": "./src/index.js",
+  "browser": "./dist/rdf-easy.bundle.js"
 }
