--- a/package.json
+++ b/package.json
@@ -9,14 +9,23 @@
     "RDF",
     "Solid"
   ],
-  "main": "src/index.js",
-  "browser": "dist/rdf-easy-bundle.js",
-  "license": "MIT",
-  "dependencies": {
-    "@comunica/actor-init-sparql-rdfjs": "^1.8.0",
-    "n3": "^1.1.1"
+  "main": "src/rdflib-easy.js",
+  "browser": "dist/rdf-easy.bundle.js",
+  "peerDependencies": {
+    "rdflib": "^0.20.1"
   },
-  "dev-dependencies": {
-    "solid-auth-cli": "^1.0.7"
+  "scripts": {
+    "build": "yarn build:lib && yarn build:browser",
+    "build:lib": "rm -rf lib && babel src --env-name production -d lib",
+    "build:browser": "webpack --config=./webpack.config.js -p"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.5.0",
+    "babel-cli": "^6.26.0",
+    "babel-loader": "^8.0.6",
+    "solid-auth-cli": "^1.0.7",
+    "uglifyjs-webpack-plugin": "^2.1.3",
+    "webpack": "^4.35.2",
+    "webpack-cli": "^3.3.5"
   }
 }
